# vehicle-license-plate-recognition

./: CMakeLists.txt  README.md
Headers/: AnnPredict.h  CharSplit.h  ColorLocate.h  SobelLocate.h  SvmPredict.h  TemplatePredict.h  Test.h  compoents.h  plateLocate.h  plateRecognize.h
Source/: AnnPredict.cpp  CharSplit.cpp  ColorLocate.cpp  NeVehicleLicensePlateRecognition.cpp  PlateLocate.cpp  PlateRecognize.cpp  SobelLocate.cpp  SvmPredict.cpp  TemplatePredict.cpp  Test.cpp  compoents.cpp
resource/model/: ann.xml  ann_zh.xml
